--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,9 @@ build_search_index = false
 highlight_code = false
 
 [extra]
+event_date = "Sabato 26 ottobre"
+event_year = "2024"
+event_location = "Dipartimento di Ingegneria"
+event_location_extra = "Aula Magna"
+
+eventbrite_url = "https://www.eventbrite.com/"
