--- a/config.toml
+++ b/config.toml
@@ -15,4 +15,4 @@ event_year = "2024"
 event_location = "Dipartimento di Ingegneria"
 event_location_extra = "Aula Magna"
 
-eventbrite_url = "https://www.eventbrite.com/"
+eventbrite_url = "https://www.eventbrite.com/e/linux-day-2024-tickets-1051924503507"
