--- a/content/schedule.toml
+++ b/content/schedule.toml
@@ -9,7 +9,7 @@ title = "Pausa pranzo"
 [[talks]]
 time = "9:30"
 title = "DiscCheckEmu: un nuovo approccio open source al cracking dei software legacy"
-author = "Luca D’Amico"
+author = "Luca D’Amico e Giuseppe Prestandrea"
 
 [[talks]]
 time = "10:00"
